--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tremor Tracker - History + Latest</title>
+    <title>Tremor Tracker</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
@@ -119,5 +119,6 @@
     <canvas id="tremorChart" width="600" height="400"></canvas>
   </body>
 </html>
+
 
 
